add background to page, style container for icons and psotion title for responsiveness

--- a/index.html
+++ b/index.html
@@ -5,13 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter Animator</title>
+    <!-- ionicon -->
+    <script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
+    <!-- stylesheet -->
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <header class="container">
+    <header class="header">
 
+        <h1>Counter Animated</h1>
+        <div class="container">
+
+
+            <div class="icon-block">
+                <ion-icon name="logo-instagram"></ion-icon>
+                <div class="counter" data-target="12790">0</div>
+                <h3>Followers</h3>
+            </div>
+
+            <div class="icon-block">
+                <ion-icon name="logo-twitter"></ion-icon>
+                <div class="counter" data-target="5120">0</div>
+                <h3>Followers</h3>
+            </div>
+            <div class="icon-block">
+                <ion-icon name="logo-facebook"></ion-icon>
+                <div class="counter" data-target="1000">0</div>
+                <h3>Subscribers</h3>
+            </div>
+            <div class="icon-block">
+                <ion-icon name="bar-chart-outline"></ion-icon>
+                <div class="counter" data-target="400">0</div>
+                <h3>Clients</h3>
+            </div>
+        </div>
     </header>
+
+
+
+
+
+
     <script src="app.js"></script>
 </body>
 
